--- a/FPTBookWebClient/Areas/Admins/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Areas/Admins/Views/Shared/_Layout.cshtml
@@ -1,1 +1,65 @@
-﻿
+﻿<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>@ViewData["Title"] - FBTBook</title>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+		  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+	@*<link rel="icon" href="/img/THELIGHTTOY.png" />*@
+</head>
+
+<body>
+	<div class="container-fluid">
+		<section class="row">
+			<div class="col-lg-2 col-md-3 content-left pr-0">
+				<!-- Navbar -->
+				<nav class="navbar navbar-expand-md bg-light navbar-light">
+					<!-- Toggle button -->
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebarMenu">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+					<!-- Brand -->
+					<a class="nav-link px-0 text-info" href="/manage">
+						<h3 class="fw-bold">Owner</h3>
+					</a>
+				</nav>
+				<!-- Navbar -->
+				<nav id="sidebarMenu" class="collapse d-md-block bg-white">
+					<div class="position-sticky">
+						<div class="list-group list-group-flush">
+							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Admins" asp-controller="Owner" asp-action="Index">Store owner management</a>
+							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Admins" asp-controller="Member" asp-action="Index">Member management</a>
+							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Admins" asp-controller="Approve" asp-action="Index">Approve management</a>
+							<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" onsubmit="return confirm('Are you sure to log out?')">
+								<button type="submit" class="list-group-item list-group-item-action py-4 bg-info text-light">Logout</button>
+							</form>
+						</div>
+					</div>
+				</nav>
+			</div>
+
+			<script>
+				function deleteConfirm() {
+					if (confirm("Are you sure to delete!")) {
+						return true;
+					} else {
+						return false;
+					}
+				}
+			</script>
+
+			<main class="col-lg-10 col-md-9 col-12">
+				@RenderBody()
+			</main>
+		</section>
+	</div>
+	@await RenderSectionAsync("Scripts", required: false)
+</body>
+
+</html>
