--- a/FPTBookWebClient/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 	<!-- Vendor CSS Files -->
 	<link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
 
 	<!-- Template Main CSS File -->
 	<link href="~/css/style.css" rel="stylesheet">
