--- a/FPTBookWebClient/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FPTBookWebClient/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,11 +6,12 @@
 }
 
 @section stylesheets {
+    <link rel="stylesheet" href="~/fonts/icomoon/style.css">
     <link rel="stylesheet" href="~/css/login.css">
 }
 
 <section class="d-lg-flex half">
-    <div class="bg order-1 order-md-2" style="background-image: url('~/img/bg_1.jpg');"></div>
+    <div class="bg order-1 order-md-2" style="background-image: url('/img/bg_login.jpg')"></div>
     <div class="contents order-2 order-md-1">
         <div class="container">
             <div class="row align-items-center justify-content-center">
