fix update view

--- a/FPTBookWebClient/Areas/Owners/Views/Genre/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Genre/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="pt-2 mb-2">
-    <h1 class="text-center">Genre List</h1>
+    <h1 class="text-center">Genres List</h1>
     <div class="text-center mb-2 row">
         <div class="col-6 d-flex justify-content-start align-items-center">
             <a href="add.html" class="btn btn-outline-info">
