--- a/FPTBookWebClient/Areas/Owners/Views/Order/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Order/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="pt-2 mb-2">
-    <h1 class="text-center mb-4">Order List</h1>
+    <h1 class="text-center mb-4">Orders List</h1>
 
     <div class="text-center mb-2 d-flex justify-content-around">
         <form action="/manage/order" name="formOrder" method="GET">
