--- a/FPTBookWebClient/Areas/Owners/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
 				<nav id="sidebarMenu" class="collapse d-md-block bg-white">
 					<div class="position-sticky">
 						<div class="list-group list-group-flush">
+							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Owners" asp-controller="Statistic" asp-action="Index">Data Statistics</a>
 							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Owners" asp-controller="Order" asp-action="Index">Order management</a>
 							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Owners" asp-controller="Genre" asp-action="Index">Genre management</a>
 							<a class="list-group-item list-group-item-action py-4 bg-info text-light" asp-area="Owners" asp-controller="Publisher" asp-action="Index">Publisher management</a>
