--- a/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
+++ b/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
@@ -27,14 +27,11 @@
 						<a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
 					</li>
 					<li>
+						<a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Change Password</a>
+					</li>
+					<li>
 						<a class="dropdown-item" href="/user/ordered">Order infomation</a>
 					</li>
-					@if (User.IsInRole("Admin"))
-					{
-						<li>
-							<a class="dropdown-item" href="/manage">Administration</a>
-						</li>
-					}
 					<div class="dropdown-divider"></div>
 					<li>
 						<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" onsubmit="return confirm('Are you sure to log out?')">
