create shop and about page

--- a/FPTBookWebClient/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Views/Shared/_Layout.cshtml
@@ -152,9 +152,9 @@
 			</div>
 			<div class="col-lg-auto col-md-12 d-flex justify-content-center my-2 my-lg-0">
 				<ul class="nav fw-bold">
-					<li><a href="/" class="nav-link text-dark text-uppercase">Home</a></li>
+					<li><a asp-action="Index" class="nav-link text-dark text-uppercase">Home</a></li>
 					<li><a asp-action="Shop" class="nav-link text-dark text-uppercase">Shop</a></li>
-					<li><a href="/about" class="nav-link text-dark text-uppercase">About</a></li>
+					<li><a asp-action="About" class="nav-link text-dark text-uppercase">About</a></li>
 				</ul>
 			</div>
 			<partial name="_LoginPartial.cshtml"></partial>
