--- a/FPTBookWebClient/Areas/Owners/Views/Publisher/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Publisher/Index.cshtml
@@ -21,8 +21,7 @@
 			</form>
 		</div>
 	</div>
-	<table id="tablecategory" class="table table-striped table-bordered m-0" cellspacing="0"
-		   width="100%">
+	<table class="table table-striped table-bordered m-0" cellspacing="0" width="100%">
 		<thead class="justify-content-md-between justify-content-sm-center align-content-center border-bottom border-2 my-2 bg-dark text-light p-3 rounded-3">
 			<tr class="text-center">
 				<th>
