--- a/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
@@ -1,30 +1,62 @@
-﻿@model BusinessObjects.Publisher
+﻿@model BusinessObjects.Book
 @{
-	ViewData["Title"] = "Adding Publisher";
+	ViewData["Title"] = "Adding Book";
 }
 <div class="pt-3 col-lg-10 col-md-9 col-12">
-	<h1 class="text-center pb-4">Adding Publisher</h1>
-	<form asp-area="Owners" asp-controller="Publisher" asp-action="Create">
+	<h1 class="text-center pb-4">Adding Book</h1>
+	<form asp-area="Owners" asp-controller="Book" asp-action="Create">
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="form-group">
-			<label class="form-label font-weight-bold">Publisher Name</label>
-			<input asp-for="PublisherName" class="form-control" required />
-			<span asp-validation-for="PublisherName" class="text-danger"></span>
+			<label class="form-label font-weight-bold">Book Name</label>
+			<input asp-for="BookTitle" class="form-control" required />
+			<span asp-validation-for="BookTitle" class="text-danger"></span>
 		</div>
 		<div class="form-group">
 			<label class="form-label font-weight-bold">Publisher Phone</label>
-			<input asp-for="PublisherPhone" class="form-control" required />
-			<span asp-validation-for="PublisherPhone" class="text-danger"></span>
+			<input asp-for="BookDescription" class="form-control" required />
+			<span asp-validation-for="BookDescription" class="text-danger"></span>
 		</div>
 		<div class="form-group">
 			<label class="form-label font-weight-bold">Publisher Mail</label>
-			<input asp-for="PublisherMail" class="form-control" required />
-			<span asp-validation-for="PublisherMail" class="text-danger"></span>
+			<input asp-for="BookDetail" class="form-control" required />
+			<span asp-validation-for="BookDetail" class="text-danger"></span>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Genre Name</label>
+			<select asp-for="GenreId" class="form-control" asp-items="ViewBag.GenreId" required></select>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Author</label>
+			<select asp-for="AuthorId" class="form-control" asp-items="ViewBag.AuthorId" required></select>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Publisher</label>
+			<select asp-for="PublisherId" class="form-control" asp-items="ViewBag.PublisherId" required></select>
 		</div>
 		<div class="form-group">
 			<label class="form-label font-weight-bold">Publisher Address</label>
-			<input asp-for="PublisherAddress" class="form-control" required />
-			<span asp-validation-for="PublisherAddress" class="text-danger"></span>
+			<input asp-for="BookPrice" class="form-control" required />
+			<span asp-validation-for="BookPrice" class="text-danger"></span>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Publisher Address</label>
+			<input asp-for="BookOriginalPrice" class="form-control" required />
+			<span asp-validation-for="BookOriginalPrice" class="text-danger"></span>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Publisher Address</label>
+			<input asp-for="SalePercent" class="form-control" required />
+			<span asp-validation-for="SalePercent" class="text-danger"></span>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Publisher Address</label>
+			<input asp-for="BookStock" class="form-control" required />
+			<span asp-validation-for="BookStock" class="text-danger"></span>
+		</div>
+		<div class="form-group">
+			<label class="form-label font-weight-bold">Publisher Address</label>
+			<input asp-for="BookImage" class="form-control" required />
+			<span asp-validation-for="BookImage" class="text-danger"></span>
 		</div>
 		<div class="form-group text-center">
 			<input type="submit" class="btn btn-info" asp-area="Owners" asp-controller="Publisher" asp-action="Create" value="Add new" />
