--- a/FPTBookWebClient/Areas/Owners/Views/Genre/Create.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Genre/Create.cshtml
@@ -2,9 +2,10 @@
 @{
 	ViewData["Title"] = "Adding Genre";
 }
+
 <div class="pt-3 col-lg-10 col-md-9 col-12">
 	<h1 class="text-center pb-4">Adding Genre</h1>
-	<form asp-area="Owners" asp-controller="Genre" asp-action="Create">
+	<form asp-area="Owners" asp-controller="Genre" asp-action="Create" method="post">
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="form-group">
 			<label class="form-label font-weight-bold">Genre Name</label>
@@ -22,6 +23,7 @@
 		</div>
 	</form>
 </div>
+
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 }
