--- a/FPTBookWebClient/Areas/Owners/Views/Genre/Update.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Genre/Update.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="pt-3 col-lg-10 col-md-9 col-12">
 	<h1 class="text-center pb-4">Updating Genre</h1>
-	<form asp-area="Owners" asp-controller="Genre" asp-action="Update">
+	<form asp-area="Owners" asp-controller="Genre" asp-action="Update" method="post">
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="form-group">
 			<label class="form-label font-weight-bold">Genre Name</label>
