--- a/FPTBookWebClient/Areas/Owners/Views/Statistic/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Statistic/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="pt-2 mb-2">
+﻿@{
+    ViewData["Title"] = "Data Statistics";
+}
+<div class="pt-2 mb-2">
     <h1 class="text-center">Data Statistics</h1>
     <div class="text-center mb-2 row">
         <div class="col-6 d-flex justify-content-start align-items-center">
