Add and update book

--- a/FPTBookWebClient/Areas/Owners/Views/Book/Update.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Book/Update.cshtml
@@ -1,37 +1,96 @@
-﻿@model BusinessObjects.Publisher
+﻿@model BusinessObjects.Book
 @{
-	ViewData["Title"] = "Updating Publisher";
+	ViewData["Title"] = "Updating Book";
 }
-<div class="pt-3 col-lg-10 col-md-9 col-12">
-	<h1 class="text-center pb-4">Updating Publisher</h1>
-	<form asp-area="Owners" asp-controller="Publisher" asp-action="Create">
-		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-		<div class="form-group">
-			<label class="form-label font-weight-bold">Publisher Name</label>
-			<input asp-for="PublisherName" class="form-control" required />
-			<span asp-validation-for="PublisherName" class="text-danger"></span>
-		</div>
-		<div class="form-group">
-			<label class="form-label font-weight-bold">Publisher Phone</label>
-			<input asp-for="PublisherPhone" class="form-control" required />
-			<span asp-validation-for="PublisherPhone" class="text-danger"></span>
-		</div>
-		<div class="form-group">
-			<label class="form-label font-weight-bold">Publisher Mail</label>
-			<input asp-for="PublisherMail" class="form-control" required />
-			<span asp-validation-for="PublisherMail" class="text-danger"></span>
-		</div>
-		<div class="form-group">
-			<label class="form-label font-weight-bold">Publisher Address</label>
-			<input asp-for="PublisherAddress" class="form-control" required />
-			<span asp-validation-for="PublisherAddress" class="text-danger"></span>
-		</div>
-		<div class="form-group text-center">
-			<input type="submit" class="btn btn-info" asp-area="Owners" asp-controller="Publisher" asp-action="Update" value="Update" />
-			<a class="btn btn-info" asp-action="Index">Cancel</a>
-		</div>
-	</form>
-</div>
+<h1 class="text-center pb-4">Updating Book</h1>
+<form enctype="multipart/form-data" onsubmit="UpdateBook(this)">
+	<div class="form-group">
+		<label asp-for="BookTitle" class="form-label font-weight-bold"></label>
+		<input asp-for="BookTitle" class="form-control" required />
+		<span asp-validation-for="BookTitle" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="BookDescription" class="form-label font-weight-bold"></label>
+		<input asp-for="BookDescription" class="form-control" required />
+		<span asp-validation-for="BookDescription" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="BookDetail" class="form-label font-weight-bold"></label>
+		<input asp-for="BookDetail" class="form-control" required />
+		<span asp-validation-for="BookDetail" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="GenreId" class="form-label font-weight-bold"></label>
+		<select asp-for="GenreId" class="form-control" asp-items="ViewBag.GenreId" required>
+			<option value="">Select Genre</option>
+		</select>
+	</div>
+	<div class="form-group">
+		<label asp-for="AuthorId" class="form-label font-weight-bold"></label>
+		<select asp-for="AuthorId" class="form-control" asp-items="ViewBag.AuthorId" required>
+			<option value="">Select Author</option>
+		</select>
+	</div>
+	<div class="form-group">
+		<label asp-for="PublisherId" class="form-label font-weight-bold"></label>
+		<select asp-for="PublisherId" class="form-control" asp-items="ViewBag.PublisherId" required>
+			<option value="">Select Publisher</option>
+		</select>
+	</div>
+	<div class="form-group">
+		<label asp-for="BookPrice" class="form-label font-weight-bold"></label>
+		<input asp-for="BookPrice" class="form-control" required />
+		<span asp-validation-for="BookPrice" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="BookOriginalPrice" class="form-label font-weight-bold"></label>
+		<input asp-for="BookOriginalPrice" class="form-control" required />
+		<span asp-validation-for="BookOriginalPrice" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="SalePercent" class="form-label font-weight-bold"></label>
+		<input asp-for="SalePercent" class="form-control" required />
+		<span asp-validation-for="SalePercent" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="BookStock" class="form-label font-weight-bold"></label>
+		<input asp-for="BookStock" class="form-control" required />
+		<span asp-validation-for="BookStock" class="text-danger"></span>
+	</div>
+	<input type="hidden" asp-for="BookImage" value="BookImage" />
+	<div class="form-group">
+		<label asp-for="ImageFile" class="form-label font-weight-bold"></label>
+		<input asp-for="ImageFile" class="form-control" required />
+		<span asp-validation-for="ImageFile" class="text-danger"></span>
+	</div>
+	<div class="form-group text-center">
+		@*<input type="submit" class="btn btn-info" value="Add new" />*@
+		<input type="submit" class="btn btn-info" value="Update" />
+		<a class="btn btn-info" asp-action="Index">Cancel</a>
+	</div>
+</form>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+	try {
+		function UpdateBook(form) {
+			$.ajax({
+				url: "https://localhost:7076/api/Books/" + @Model.BookId,
+				type: "put",
+				data: new FormData(form),
+				processData: false,
+				contentType: false,
+				success: function (result, status, xhr) {
+					window.location.href = '/Owners/Book';
+				},
+				error: function (xhr, status, error) {
+					console.log(xhr);
+				}
+			});
+		}
+	} catch (e) {
+		console.log(e)
+	}
+</script>
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 }
