--- a/FPTBookWebClient/Views/Home/Detail.cshtml
+++ b/FPTBookWebClient/Views/Home/Detail.cshtml
@@ -17,23 +17,22 @@
 				</div>
 			</div>
 			@{
-				decimal PriceSale = Model.BookPrice - (Model.BookPrice * (Model.SalePercent / 100));
+				decimal PriceSale = Model.BookPrice - (Model.BookPrice * ((decimal)Model.SalePercent / 100m));
 			}
 			<div class="col-md-6">
 				<div class="product-dtl">
 					<div class="product-info">
 						<div class="product-name">@Model.BookTitle</div>
 						<div class="product-price-discount">
-							<span>$@PriceSale</span>
+							<span>$@PriceSale.ToString("N2")</span>
 							@if (@Model.BookPrice != PriceSale)
 							{
-								<span class="line-through">$@Model.BookPrice</span>
+								<span class="line-through">$@Model.BookPrice.ToString("N2")</span>
 							}
 						</div>
 					</div>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua.
+						@Model.BookDescription
 					</p>
 					<div class="product-count">
 						<label for="size" class="mb-2">Quantity</label>
@@ -68,39 +67,21 @@
 								<tbody>
 									<tr>
 										<td width="40%" class="fw-bold">Genre</td>
-										<td>Genre Name</td>
+										<td>@Model.Genre.GenreName</td>
 									</tr>
 									<tr>
 										<td width="40%" class="fw-bold">Publisher</td>
-										<td>Publisher Name</td>
+										<td>@Model.Publisher.PublisherName</td>
 									</tr>
 									<tr>
 										<td width="40%" class="fw-bold">Author</td>
-										<td>Author Name</td>
+										<td>@Model.Author.AuthorName</td>
 									</tr>
 									<tr>
 										<td width="40%" class="fw-bold">Detail Description</td>
 										<td>
 											<p style="text-align: justify;">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-												eiusmod
-												tempor incididunt
-												ut
-												labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-												exercitation ullamco
-												laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-												dolor
-												in reprehenderit in
-												voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-												Excepteur
-												sint occaecat
-												cupidatat
-												non proident, sunt in culpa qui officia deserunt mollit anim id est
-												laborum. Sed ut
-												perspiciatis
-												unde omnis iste natus error sit voluptatem accusantium doloremque
-												laudantium, totam rem
-												aperiam.
+												@Model.BookDetail
 											</p>
 										</td>
 									</tr>
